--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
-    "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
@@ -36,9 +35,11 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/jest-axe": "^3.5.5",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-storybook": "^0.6.11",
     "jest": "^29.5.0",
+    "jest-axe": "^7.0.1",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.7",
     "storybook": "^7.0.4"
