[ODCC-4]: add tests for accordion

--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@storybook/nextjs": "^7.0.4",
     "@storybook/react": "^7.0.4",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest-axe": "^3.5.5",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-storybook": "^0.6.11",
